[gd_scene load_steps=67 format=3 uid="uid://c5foatdyk3vje"]

[ext_resource type="Texture2D" uid="uid://bki3lxmlr32ne" path="res://assets/spritesheets/draft_sprite_sheet.png" id="1_um8mx"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="2_2crss"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="2_id0la"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="3_4m61r"]
[ext_resource type="Script" path="res://components/movement_component.gd" id="3_e8teh"]
[ext_resource type="Script" path="res://components/exp_component.gd" id="4_1c3tg"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="4_050hm"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="7_bpmwu"]
[ext_resource type="Script" path="res://components/die_component.gd" id="8_4ikj3"]
[ext_resource type="Script" path="res://components/attack_input_component.gd" id="10_5lm38"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yvus4"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 1020, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1bi5"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 1020, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjhhe"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 1020, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdwhf"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 1020, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_wijsh"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 1020, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_gibir"]
atlas = ExtResource("1_um8mx")
region = Rect2(1020, 1020, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlw37"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxvjg"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwirb"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wxu1"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1iji"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_65otg"]
atlas = ExtResource("1_um8mx")
region = Rect2(1020, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h4dv"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 1428, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1pp3"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 1428, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_at7r1"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 1428, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqipb"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 1428, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c15l"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 1428, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq6c1"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 1224, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_21ghv"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 1224, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_hagvd"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 1224, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l707"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 1224, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_cky3s"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 1224, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjpob"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnljp"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_wui1m"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcjje"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wp8w"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fvue"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqoxh"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc0d1"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr3fs"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiqxq"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2rlx"]
atlas = ExtResource("1_um8mx")
region = Rect2(1020, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu2ya"]
atlas = ExtResource("1_um8mx")
region = Rect2(1224, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_snm3m"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyqoc"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejwcv"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_88h1w"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq1g0"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tnes"]
atlas = ExtResource("1_um8mx")
region = Rect2(1020, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe56s"]
atlas = ExtResource("1_um8mx")
region = Rect2(0, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbaey"]
atlas = ExtResource("1_um8mx")
region = Rect2(204, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxuuh"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6cf0"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3col"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn4f7"]
atlas = ExtResource("1_um8mx")
region = Rect2(1020, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_21dyk"]
atlas = ExtResource("1_um8mx")
region = Rect2(1224, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbevi"]
atlas = ExtResource("1_um8mx")
region = Rect2(408, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdo7c"]
atlas = ExtResource("1_um8mx")
region = Rect2(612, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xkgj"]
atlas = ExtResource("1_um8mx")
region = Rect2(816, 408, 204, 204)

[sub_resource type="SpriteFrames" id="SpriteFrames_5c0sb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvus4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1bi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjhhe")
}],
"loop": false,
"name": &"dash_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdwhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wijsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gibir")
}],
"loop": false,
"name": &"dash_forward",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlw37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxvjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwirb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wxu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1iji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65otg")
}],
"loop": false,
"name": &"dash_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h4dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1pp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at7r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqipb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c15l")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq6c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21ghv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hagvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l707")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cky3s")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjpob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnljp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wui1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcjje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wp8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fvue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqoxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc0d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr3fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiqxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2rlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu2ya")
}],
"loop": false,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snm3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyqoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejwcv")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88h1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq1g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tnes")
}],
"loop": true,
"name": &"move_forward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe56s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbaey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxuuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6cf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3col")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn4f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21dyk")
}],
"loop": false,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbevi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdo7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xkgj")
}],
"loop": true,
"name": &"moving_right",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_khnnb"]
radius = 0.832885

[sub_resource type="SphereShape3D" id="SphereShape3D_1pde4"]
radius = 0.001

[sub_resource type="SphereShape3D" id="SphereShape3D_my05y"]
radius = 0.832885

[sub_resource type="Curve" id="Curve_a36hh"]
max_value = 10.0
_data = [Vector2(0, 0), 0.0, 25.0, 0, 0, Vector2(1, 10), 25.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AudioStream" id="AudioStream_h358p"]

[node name="PlayerBody" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.837512, 0)
collision_layer = 0
collision_mask = 4
platform_floor_layers = 4
platform_wall_layers = 4

[node name="PlayerSprite" type="AnimatedSprite3D" parent="."]
billboard = 1
shaded = true
sprite_frames = SubResource("SpriteFrames_5c0sb")
animation = &"dash_right"
autoplay = "idle"

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_khnnb")

[node name="HitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("stats")]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource("2_2crss")
stats = NodePath("../Player/StatsComponent")

[node name="PlayerHitboxCollision" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("SphereShape3D_1pde4")

[node name="HurtboxComponent" type="Area3D" parent="."]
collision_mask = 0
script = ExtResource("3_4m61r")

[node name="PlayerHurtboxCollision" type="CollisionShape3D" parent="HurtboxComponent"]
shape = SubResource("SphereShape3D_my05y")

[node name="CameraPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="PlayerCamera" type="Camera3D" parent="CameraPoint"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 2, 8)

[node name="Player" type="Node3D" parent="."]

[node name="ExperienceComponent" type="Node" parent="Player" node_paths=PackedStringArray("stats")]
script = ExtResource("4_1c3tg")
stats = NodePath("../StatsComponent")
level_curve = SubResource("Curve_a36hh")

[node name="StatsComponent" type="Node" parent="Player" node_paths=PackedStringArray("exp_component")]
script = ExtResource("2_id0la")
exp_component = NodePath("../ExperienceComponent")
move_speed = 12.5
dash_distance = 12.5
damage = 12.5

[node name="MovementComponent" type="Node" parent="Player" node_paths=PackedStringArray("actor")]
script = ExtResource("3_e8teh")
actor = NodePath("../..")

[node name="MoveInputComponent" type="Node" parent="Player" node_paths=PackedStringArray("hurt_box", "stats_component", "move_component")]
script = ExtResource("4_050hm")
hurt_box = NodePath("../../HurtboxComponent")
stats_component = NodePath("../StatsComponent")
move_component = NodePath("../MovementComponent")

[node name="HurtComponent" type="Node" parent="Player" node_paths=PackedStringArray("stats", "hurtbox")]
script = ExtResource("7_bpmwu")
stats = NodePath("../StatsComponent")
hurtbox = NodePath("../../HurtboxComponent")

[node name="DieComponent" type="Node" parent="Player" node_paths=PackedStringArray("actor", "stats")]
script = ExtResource("8_4ikj3")
actor = NodePath("..")
stats = NodePath("../StatsComponent")

[node name="AttackInputComponent" type="Node" parent="Player" node_paths=PackedStringArray("stats", "hitbox", "exp_component")]
script = ExtResource("10_5lm38")
stats = NodePath("../StatsComponent")
hitbox = NodePath("../../HitboxComponent")
exp_component = NodePath("../ExperienceComponent")

[node name="audio" type="Node3D" parent="."]

[node name="AudioListener3D" type="AudioListener3D" parent="audio"]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="audio"]
stream = SubResource("AudioStream_h358p")
bus = &"sfx"
